syntax = "proto3";

package proto;
option go_package = "./;proto";

// CmdId: 4032
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message AskAddFriendReq {
  uint32 target_uid = 8;
}
