syntax = "proto3";

package proto;
option go_package = "./;proto";

import "AbilityInvokeEntry.proto";

message ClientAbilityInitFinishNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    IS_ALLOW_CLIENT = 1;
    CMD_ID = 1137;
  }

  uint32 entity_id = 13;
  repeated AbilityInvokeEntry invokes = 9;
}
