syntax = "proto3";

package proto;
option go_package = "./;proto";


message EnterWorldAreaReq {
  enum CmdId {
    option allow_alias = true;
    ENET_CHANNEL_ID = 0;
    NONE = 0;
    ENET_IS_RELIABLE = 1;
    IS_ALLOW_CLIENT = 1;
    CMD_ID = 209;
  }

  uint32 area_type = 1;
  uint32 area_id = 2;
}
