syntax = "proto3";

package proto;
option go_package = "./;proto";

import "OnlinePlayerInfo.proto";

message GetOnlinePlayerListRsp {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 49;
  }

  int32 retcode = 12;
  repeated OnlinePlayerInfo player_info_list = 10;
  uint32 param = 2;
}
