syntax = "proto3";

package proto;
option go_package = "./;proto";

import "CityInfo.proto";

message GetSceneAreaRsp {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 206;
  }

  int32 retcode = 2;
  uint32 scene_id = 13;
  repeated uint32 area_id_list = 6;
  repeated CityInfo city_info_list = 3;
}
