syntax = "proto3";

package proto;
option go_package = "./;proto";


message GetScenePointRsp {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 297;
  }

  int32 retcode = 5;
  uint32 scene_id = 12;
  repeated uint32 unlocked_point_list = 14;
  uint32 belong_uid = 15;
  repeated uint32 unlock_area_list = 11;
  repeated uint32 locked_point_list = 4;
  repeated uint32 to_be_explore_dungeon_entry_list = 8;
  repeated uint32 not_explored_dungeon_entry_list = 3;
  repeated uint32 group_unlimit_point_list = 6;
  repeated uint32 not_interact_dungeon_entry_list = 1;
  repeated uint32 hide_point_list = 9;
}
