syntax = "proto3";

package proto;
option go_package = "./;proto";

import "Vector.proto";
import "ItemHint.proto";

message ItemAddHintNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 632;
  }

  repeated ItemHint item_list = 10;
  Vector position = 12;
  bool is_position_valid = 13;
  uint32 reason = 5;
  uint32 quest_id = 14;
  bool is_transfered_from_avatar_card = 11;
  repeated ItemHint overflow_transformed_item_list = 3;
  bool is_general_reward_hiden = 7;
}
