syntax = "proto3";

package proto;
option go_package = "./;proto";


message OpenStateUpdateNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 119;
  }

  map<uint32, uint32> open_state_map = 12;
}
