syntax = "proto3";

package proto;
option go_package = "./;proto";

import "TeamEnterSceneInfo.proto";
import "MPLevelEntityInfo.proto";
import "AvatarEnterSceneInfo.proto";

message PlayerEnterSceneInfoNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    IS_ALLOW_CLIENT = 1;
    CMD_ID = 274;
  }

  uint32 cur_avatar_entity_id = 8;
  repeated AvatarEnterSceneInfo avatar_enter_info = 14;
  TeamEnterSceneInfo team_enter_info = 9;
  MPLevelEntityInfo mp_level_entity_info = 5;
  uint32 enter_scene_token = 7;
}
