syntax = "proto3";

package proto;
option go_package = "./;proto";


message PlayerTimeNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 172;
  }

  bool is_paused = 8;
  uint64 player_time = 4;
  uint64 server_time = 14;
}
