syntax = "proto3";

package proto;
option go_package = "./;proto";


message SceneAreaWeatherNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 229;
  }

  uint32 weather_gadget_id = 13;
  map<uint32, string> weather_value_map = 10;
  uint32 weather_area_id = 15;
  uint32 climate_type = 14;
  float trans_duration = 11;
}
