syntax = "proto3";

package proto;
option go_package = "./;proto";

import "VisionType.proto";
import "SceneEntityInfo.proto";

message SceneEntityAppearNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 217;
  }

  repeated SceneEntityInfo entity_list = 6;
  VisionType appear_type = 8;
  uint32 param = 11;
}
