syntax = "proto3";

package proto;
option go_package = "./;proto";

import "ScenePlayerInfo.proto";

message ScenePlayerInfoNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 293;
  }

  repeated ScenePlayerInfo player_info_list = 1;
}
