syntax = "proto3";

package proto;
option go_package = "./;proto";

import "PlayTeamEntityInfo.proto";

message SyncScenePlayTeamEntityNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 3096;
  }

  uint32 scene_id = 13;
  repeated PlayTeamEntityInfo entity_info_list = 2;
}
