syntax = "proto3";

package proto;
option go_package = "./;proto";

import "PropValue.proto";

message WorldDataNotify {
  enum DataType {
    DATA_TYPE_NONE = 0;
    DATA_TYPE_WORLD_LEVEL = 1;
    DATA_TYPE_IS_IN_MP_MODE = 2;
  }

  map<uint32, PropValue> world_prop_map = 3;
}
